--- a/views/about.html
+++ b/views/about.html
@@ -6,7 +6,7 @@
             </div>
             <nav class="nav-link">
                 <ul class="list-nav-link">
-                    <li><a href="#/">Home</a></li>
+                    <li><a href="#/home">Home</a></li>
                     <li class="active"><a href="#/about">About me</a></li>
                     <li><a href="#/my-program">my program</a></li>
                     <li><a href="#/calorie-calculator">CALORIE CALCULATOR</a></li>
