--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,11 @@
 <header class="header">
     <div class="wrap-header">
         <div class="wrap-header-content">
+            <div class="toggle-sidebar">
+                <button class="toggle-sidebar">
+                    <div class="menu-btn"></div>
+                </button>
+            </div>
             <div class="logo">
                 <a class="routeHome" href=""><img src="./image/logo.png" alt=""></a>
             </div>
