--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@
     flex: 1;
 }
 .member-area{
-    padding: 12px 32px;
+   margin-left: 32px;
 }
 .member-area a{
     display: flex;
@@ -165,4 +165,52 @@
 .policy i{
     margin: 0 4px;
     color: #2c3691;
+}
+
+.toggle-sidebar{
+    
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+.toggle-sidebar button{
+    width: 42px;
+    height: 42px;
+    border: 1px solid #fff;
+    background-color: transparent;
+    border: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease-in-out;
+}
+.menu-btn {
+    position: relative;
+    width: 20px;
+    height: 1.25px;
+    background-color: #000;
+    border-radius: 5px;
+    transition: all 0.5s ease-in-out;
+}
+.menu-btn::after{
+    left: 0;
+    transform: translateY(6px);
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 1.25px;
+    background: #000;
+    border-radius: 5px;
+    transition: all 0.5s ease-in-out;
+}
+.menu-btn::before{  
+    left: 0;
+    transform: translateY(-6px);
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 1.25px;
+    background: #000;
+    border-radius: 5px;
+    transition: all 0.5s ease-in-out;
 }
